--- a/Reservation.html
+++ b/Reservation.html
@@ -35,7 +35,7 @@
 		 		</button>
 			  	<div class="collapse navbar-collapse" id="navbarText">
 			    	<ul class="navbar-nav ml-auto">
-			        	<li class="nav-item"><a class="nav-link" href="Index.html">Home</a></li> 
+			        	<li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
 						<li class="nav-item"><a class="nav-link" href="Services.html">Services</a></li> 
 					    <li class="nav-item"><a class="nav-link" href="Reservation.html">Reservation</a></li>
 					    <li class="nav-item"><a class="nav-link" href="About Us.html">About Us</a> </li>	
