--- a/About Us.html
+++ b/About Us.html
@@ -16,6 +16,8 @@
 	
 <link href='https://fonts.googleapis.com/css?family=Merienda' rel='stylesheet'>
 
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+
 <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/><link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 	
 	<!-- End link Files -->
@@ -65,10 +67,10 @@
 				
 					<form>
 						<div class="form-row">
-						<div class="form-group col-6"  >
+						<div class="form-group col-md-6"  >
 						  			<img class=" w-150 img-fluid " style="border-radius:40px;" src="images/1.jpg">
 						  	</div>
-						<div class="form-group col-6">
+						<div class="form-group col-md-6">
 						  	
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec pretium mi. Curabitur facilisis ornare velit non vulputate. Aliquam metus tortor, auctor id gravida condimentum, viverra quis sem.
 
