--- a/Reservation.html
+++ b/Reservation.html
@@ -72,7 +72,7 @@
 						  		<input type="text" class="form-control" id="inputName" placeholder="Name">
 						  	</div>
 								<div class="form-group col-6">
-						  		<label for="inputNumber"> Number Of Guests</label>
+						  		<label for="inputNumber"> Num Of Guests</label>
 						  		<input type="number" class="form-control" id="inputNumber" placeholder="Number of Guests">
 						  	</div>
 						  	<div class="form-group col-6">
